[package]
name = "mitoxide-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "WASM runtime support for Mitoxide"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/mitoxide"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }

# WASM runtime
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

# Additional dependencies
sha2 = "0.10"
serde_json = "1.0"
wat = "1.0"

[dev-dependencies]
tokio-test = "0.4"